2014-09-30  Vincent Belaïche  <vincentb1@users.sourceforge.net>

	* ses.el (ses-calculate-cell): bind row and col dynamically to
	their values with 'cl-progv'.
	(ses-dorange): bind row, col, maxrow and maxcol dynamically to
	their values with 'cl-progv', also use non-interned symbols for
	row, minrow, maxrow, mincol and maxcol.
	(maxrow maxcol): New defvar, to make the compiler happy.

2014-09-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-at-point): Emit warning for ill-behaved
	completion functions.

2014-09-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ses.el (ses--letref): Quote value before it gets re-evaluated.

2014-09-28  Thien-Thi Nguyen  <ttn@gnu.org>

	Font-lock `cl-flet*', too.
	* emacs-lisp/lisp-mode.el (lisp-cl-font-lock-keywords-2):
	Add "flet*" to intermediate var `cl-lib-kw'.

2014-09-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* epg-config.el (epg-gpg-program): Use the plain program names rather
	than their absolute file name.

	* subr.el (track-mouse): New macro.
	* emacs-lisp/cconv.el (cconv-convert, cconv-analyse-form):
	Remove track-mouse case.
	* emacs-lisp/bytecomp.el (byte-compile-track-mouse): Remove.

2014-09-27  Leo Liu  <sdl.web@gmail.com>

	* progmodes/elisp-mode.el (elisp--eldoc-last-data): Use defvar.

	* emacs-lisp/eldoc.el (eldoc-mode): Fix thinko.

2014-09-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/pcase.el (pcase--split-match, pcase--app-subst-match):
	Handle the case where `match' is :pcase--succeed or :pcase--fail
	(bug#18554).

	Introduce global-eldoc-mode.  Move Elisp-specific code to elisp-mode.el.
	* emacs-lisp/eldoc.el (global-eldoc-mode): New minor mode.
	(eldoc-schedule-timer): Obey it.
	(eldoc-documentation-function): Default to nil.
	(eldoc-mode): Don't enable if eldoc-documentation-function is not set.
	(eldoc-documentation-function-default, eldoc-get-fnsym-args-string)
	(eldoc-highlight-function-argument, eldoc-get-var-docstring)